fixed some more layout issues & gmap zoom level

--- a/public/css/integral.scss
+++ b/public/css/integral.scss
@@ -44,10 +44,10 @@ body {
 .logo {
 	margin-top: 1%;
 	img {
-		margin-left: 25%;
+		margin-left: 0%;
 	}
 	p {
-		margin-left: 15%;
+		margin-left: 30%;
 		margin-top: 5%;
 		margin-bottom: -5%;
 		font-size: 130%;
